# pico-joystick

./: .gitignore  CMakeLists.txt  README.md  descriptors.md  detected.txt
.devcontainer/: Dockerfile  devcontainer.json
kicad/joystick/: Project.bak  Project.kicad_sym  fp-info-cache  joystick.kicad_pcb  joystick.kicad_prl  joystick.kicad_pro  joystick.kicad_sch  sym-lib-table
src/: hardware.cpp  hardware.h  main.cpp  tusb_config.h  usb_descriptors.cpp  usb_descriptors.h
